--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -49,15 +49,13 @@
 %\footnotetext[1]{Contributed equally}
 
 % More complicate cases, e.g. with dual affiliations and joint authorship
-\midlauthor{\Name{Author Name1\midljointauthortext{Contributed equally}\nametag{$^{1,2}$}} \Email{abc@sample.edu}\\
-\addr $^{1}$ Address 1 \\
-\addr $^{2}$ Address 2 \AND
-\Name{Author Name2\midlotherjointauthor\nametag{$^{1}$}} \Email{xyz@sample.edu}\\
-\Name{Author Name3\nametag{$^{2}$}} \Email{alphabeta@example.edu}\\
-\Name{Author Name4\midljointauthortext{Contributed equally}\nametag{$^{3}$}} \Email{uvw@foo.ac.uk}\\
-\addr $^{3}$ Address 3 \AND
-\Name{Author Name5\midlotherjointauthor\nametag{$^{4}$}} \Email{fgh@bar.com}\\
-\addr $^{4}$ Address 4
+\midlauthor{
+	\Name{Paul Dubois\nametag{$^{1,2,3}$}} \Email{p.dubois@centralesupelec.fr}\\
+	\addr $^{1}$ Biomathematics, MICS, CentraleSupélec \\
+	\addr $^{2}$ TheraPanacea \\
+	\addr $^{3}$ Institut du Cancer de Montpellier\AND
+	\Name{Paul-Henry Cournède\nametag{$^{1}$}} \Email{paul-henry.cournede@centralesupelec.fr}\\
+	\Name{Nikos Paragios\nametag{$^{2}$}} \Email{n.paragios@therapanacea.eu}
 }
 
 \begin{document}
