added abstract to midl template

--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -63,7 +63,7 @@
 \maketitle
 
 \begin{abstract}
-This is a great paper and it has a concise abstract.
+	\input{abstract.tex}
 \end{abstract}
 
 \begin{keywords}
