--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -73,7 +73,7 @@
 \input{my_content.tex}
 
 % Acknowledgments---Will not appear in anonymized version
-\midlacknowledgments{We thank a bunch of people.}
+%\midlacknowledgments{We thank a bunch of people.}
 
 \bibliography{midl-samplebibliography}
 
