use refs.bib in midl template

--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -75,6 +75,6 @@
 % Acknowledgments---Will not appear in anonymized version
 %\midlacknowledgments{We thank a bunch of people.}
 
-\bibliography{midl-samplebibliography}
+\bibliography{refs.bib}
 
 \end{document}
