edited midl authors

--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -51,11 +51,21 @@
 % More complicate cases, e.g. with dual affiliations and joint authorship
 \midlauthor{
 	\Name{Paul Dubois\nametag{$^{1,2,3}$}} \Email{p.dubois@centralesupelec.fr}\\
-	\addr $^{1}$ Biomathematics, MICS, CentraleSupélec \\
+	\addr $^{1}$ Biomathematics, MICS, CentraleSupélec, Université Paris-Saclay \\
 	\addr $^{2}$ TheraPanacea \\
-	\addr $^{3}$ Institut du Cancer de Montpellier\AND
-	\Name{Paul-Henry Cournède\nametag{$^{1}$}} \Email{paul-henry.cournede@centralesupelec.fr}\\
+	\addr $^{3}$ Institut du Cancer de Montpellier
+	\AND
+	\Name{Paul-Henry Cournède\nametag{$^{1}$}} \Email{paul-henry.cournede@centralesupelec.fr}
+	\AND
 	\Name{Nikos Paragios\nametag{$^{2}$}} \Email{n.paragios@therapanacea.eu}
+%	\AND
+%	\Name{Rafael Marini-Silva\nametag{$^{2}$}} \Email{r.marini-silva@therapanacea.eu}
+%	\AND
+%	\Name{Norbert Bus\nametag{$^{2}$}} \Email{n.bus@therapanacea.eu}
+%	\AND
+%	\Name{Nikos Komodakis\nametag{$^{2}$}} \Email{n.komodakis@therapanacea.eu}
+%	\AND
+%	\Name{Pascal Fenoglietto\nametag{$^{3}$}} \Email{Pascal.Fenoglietto@icm.unicancer.fr}
 }
 
 \begin{document}
