edited authors & affiliation on ICCR template

--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -25,16 +25,19 @@
 \title{Clinical Knowledge Based Reinforcement Learning\\for Radiotherapy Treatment Planning System}
 
 %%%%% add authors and affiliations here %%%%%
-\author[1,2]{Paul Dubois}
+\author[1,2,3]{Paul Dubois}
 \author[1]{Nikos Paragios}
 \author[2]{Paul-Henry Cournède}
 %\author[1]{Rafael Marini-Silva}
 %\author[1]{Norbert Bus}
-%\author[3]{Nikos Komodakis}
+%\author[1]{Nikos Komodakis}
+%\author[3]{Pascal Fenoglietto}
 
 \affil[1]{TheraPanacea, Paris, France}
 
 \affil[2]{MICS, CentraleSupélec, Université Paris-Saclay, Paris, France}
+
+\affil[3]{Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France}
 
 %%%%% don't change these 2 lines %%%%%
 \maketitle
