added title to midl template

--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -17,7 +17,7 @@
 \jmlrvolume{-- Under Review}
 \editors{Under Review for MIDL 2024}
 
-\title[Short Title]{Full Title of Article}
+\title[Radiotherapy Optimization with Clinical Knowledge]{Radiotherapy Dose Optimization with Clinical Knowledge Based Reinforcement Learning}
 
  % Use \Name{Author Name} to specify the name.
  % If the surname contains spaces, enclose the surname
