added keywords to midl template

--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -77,7 +77,7 @@
 \end{abstract}
 
 \begin{keywords}
-	List of keywords, comma separated.
+	Radiotherapy, Dose Optimization, Reinforcement Learning, Deep Learning.
 \end{keywords}
 
 \input{my_content.tex}
