added title & short title to ipmu template

--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -13,10 +13,9 @@
 % \renewcommand\UrlFont{\color{blue}\rmfamily}
 
 \begin{document}
+	\title{Radiotherapy Dose Optimization with Clinical Knowledge Based Reinforcement Learning}
 	%
-	\title{Contribution Title\thanks{Supported by organization x.}}
-	%
-	%\titlerunning{Abbreviated paper title}
+	\titlerunning{Radiotherapy Optimization with Clinical Knowledge}
 	% If the paper title is too long for the running head, you can set
 	% an abbreviated paper title here
 	%
