added authors (ipmu template)

--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -16,14 +16,22 @@
 	\title{Radiotherapy Dose Optimization with Clinical Knowledge Based Reinforcement Learning}
 	%
 	\titlerunning{Radiotherapy Optimization with Clinical Knowledge}
-	% If the paper title is too long for the running head, you can set
-	% an abbreviated paper title here
-	%
-	\author{First Author\inst{1}\orcidID{0000-1111-2222-3333} \and
-		Second Author\inst{2,3}\orcidID{1111-2222-3333-4444} \and
-		Third Author\inst{3}\orcidID{2222--3333-4444-5555}}
-	%
-	\authorrunning{F. Author et al.}
+	
+	\author{Paul Dubois\inst{1,2,3}\orcidID{0000-1111-2222-3333}
+		\and\\
+		Paul-Henry Cournède \inst{1}\orcidID{1111-2222-3333-4444}
+		\and\\
+		Nikos Paragios\inst{2}\orcidID{2222--3333-4444-5555}
+%		\and\\
+%		Rafael Marini-Silva\inst{2}\orcidID{0000--0000-0000-0000}
+%		\and\\
+%		Norbert Bus\inst{2}\orcidID{0000--0000-0000-0000}
+%		\and\\
+%		Nikos Komodakis\inst{2}\orcidID{0000--0000-0000-0000}
+%		\and\\
+%		Pascal Fenoglietto\inst{3}\orcidID{0000--0000-0000-0000}
+	}
+	% \authorrunning{F. Author et al.}
 	% First names are abbreviated in the running head.
 	% If there are more than two authors, 'et al.' is used.
 	%
