--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -14,13 +14,12 @@
 
 \begin{document}
 	\title{Radiotherapy Dose Optimization with Clinical Knowledge Based Reinforcement Learning}
-	%
 	\titlerunning{Radiotherapy Optimization with Clinical Knowledge}
 	
 	\author{Paul Dubois\inst{1,2,3}\orcidID{0000-1111-2222-3333}
-		\and\\
+		\and \\
 		Paul-Henry Cournède \inst{1}\orcidID{1111-2222-3333-4444}
-		\and\\
+		\and \\
 		Nikos Paragios\inst{2}\orcidID{2222--3333-4444-5555}
 %		\and\\
 %		Rafael Marini-Silva\inst{2}\orcidID{0000--0000-0000-0000}
@@ -35,13 +34,20 @@
 	% First names are abbreviated in the running head.
 	% If there are more than two authors, 'et al.' is used.
 	%
-	\institute{Princeton University, Princeton NJ 08544, USA \and
-		Springer Heidelberg, Tiergartenstr. 17, 69121 Heidelberg, Germany
-		\email{lncs@springer.com}\\
-		\url{http://www.springer.com/gp/computer-science/lncs} \and
-		ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
-		\email{\{abc,lncs\}@uni-heidelberg.de}}
-	%
+	\institute{Biomathematics, MICS, CentraleSupélec, Université Paris-Saclay
+		\email{\{p.dubois,paul-henry.cournede\}@centralesupelec.fr}\\
+		\url{https://biomathematics.mics.centralesupelec.fr/}
+		\and
+		TheraPanacea, Paris, France\\
+		\email{\{p.dubois,n.paragios\}@therapanacea.eu}\\
+%		\email{\{p.dubois,n.paragios,r.marini-silva,n.bus,n.komodakis\}@therapanacea.eu}\\
+		\url{https://www.therapanacea.eu/}
+		\and
+		Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France\\
+		\email{paul.dubois@icm.unicancer.fr}\\
+%		\email{\{paul.dubois,pascal.fenoglietto\}@therapanacea.eu}\\
+		\url{https://www.therapanacea.eu/}
+	}
 	\maketitle              % typeset the header of the contribution
 	%
 	\begin{abstract}
