--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -48,12 +48,12 @@
 %		\email{\{paul.dubois,pascal.fenoglietto\}@therapanacea.eu}\\
 		\url{https://www.therapanacea.eu/}
 	}
-	\maketitle              % typeset the header of the contribution
-	%
+	
+	\maketitle
+	
 	\begin{abstract}
-		The abstract should briefly summarize the contents of the paper in
-		15--250 words.
-		
+%		The abstract should briefly summarize the contents of the paper in 15--250 words.
+		\include{abstract.tex}
 		\keywords{First keyword  \and Second keyword \and Another keyword.}
 	\end{abstract}
 	
