--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -54,7 +54,7 @@
 	\begin{abstract}
 %		The abstract should briefly summarize the contents of the paper in 15--250 words.
 		\include{abstract.tex}
-		\keywords{First keyword  \and Second keyword \and Another keyword.}
+		\keywords{Radiotherapy \and Dose Optimization \and Reinforcement Learning \and Deep Learning.}
 	\end{abstract}
 	
 	% the environments 'definition', 'lemma', 'proposition', 'corollary',
