input (better than include) abstract

--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -53,7 +53,7 @@
 	
 	\begin{abstract}
 %		The abstract should briefly summarize the contents of the paper in 15--250 words.
-		\include{abstract.tex}
+		\input{abstract.tex}
 		\keywords{Radiotherapy \and Dose Optimization \and Reinforcement Learning \and Deep Learning.}
 	\end{abstract}
 	
