--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -16,19 +16,19 @@
 	\title{Radiotherapy Dose Optimization with Clinical Knowledge Based Reinforcement Learning}
 	\titlerunning{Radiotherapy Optimization with Clinical Knowledge}
 	
-	\author{Paul Dubois\inst{1,2,3}\orcidID{0000-1111-2222-3333}
+	\author{Paul Dubois\inst{1,2,3}\orcidID{0009-0003-3856-8048}
 		\and \\
-		Paul-Henry Cournède \inst{1}\orcidID{1111-2222-3333-4444}
+		Paul-Henry Cournède \inst{1}\orcidID{0000-0001-7679-6197}
 		\and \\
-		Nikos Paragios\inst{2}\orcidID{2222--3333-4444-5555}
+		Nikos Paragios\inst{2}\orcidID{0000-0002-9668-4763}
 %		\and\\
-%		Rafael Marini-Silva\inst{2}\orcidID{0000--0000-0000-0000}
+%		Rafael Marini-Silva\inst{2}
 %		\and\\
-%		Norbert Bus\inst{2}\orcidID{0000--0000-0000-0000}
+%		Norbert Bus\inst{2}
 %		\and\\
-%		Nikos Komodakis\inst{2}\orcidID{0000--0000-0000-0000}
+%		Nikos Komodakis\inst{2}
 %		\and\\
-%		Pascal Fenoglietto\inst{3}\orcidID{0000--0000-0000-0000}
+%		Pascal Fenoglietto\inst{3}
 	}
 	% \authorrunning{F. Author et al.}
 	% First names are abbreviated in the running head.
