added figure caption

--- a/my_content.tex
+++ b/my_content.tex
@@ -33,7 +33,7 @@ We introduce a new paradigm in reinforcement learning (RL), based on the evaluat
 \begin{figure*}
 	\centering
 	\includegraphics[width=0.8\textwidth]{reward.pdf}
-	\caption{}
+	\caption{Classical reinforcement learning reward for automatic dosimetry.}
 	\label{fig:reward_fig}
 \end{figure*}
 
