started writing synthetic phantom patients

--- a/my_content.tex
+++ b/my_content.tex
@@ -98,14 +98,20 @@ Therefore, while testing, we choose the action with the best prediction, while p
 
 \section{Results}
 
+
+
 \section{Discussion}
 
 
 \section*{Appendix}
-
-\subsection*{Synthetic phantom patients}
 As this is very new and ongoing research, we generated synthetic phantom patients and associated trustable clinical doses.
 In future work, we hope to be able to apply this technique to real cases.
+
+\subsection*{Synthetic phantom patients}
+We generated 130 patients with oval axial section body.
+We set the body density to water density.
+We then added an ellipsoid PTV within the body, with slightly different density (following $\mathcal{N}(1,0.05)$).
+Likewise, we generate 5 organs gravitating around the PTV, aligned on the axial section.
 
 \subsection*{Clinical dose}
 
