added CT main slice figure to article

--- a/my_content.tex
+++ b/my_content.tex
@@ -113,6 +113,13 @@ We set the body density to water density.
 We then added an ellipsoid PTV within the body, with slightly different density (following $\mathcal{N}(1,0.05)$).
 Likewise, we generate 5 organs gravitating around the PTV, aligned on the axial section.
 
+\begin{figure*}
+	\centering
+	\includegraphics[width=0.8\textwidth]{main_slice-ct.pdf}
+	\caption{Main axial slice (center of the PTV) CT of the first patient generated.}
+	\label{fig:main_slice-ct}
+\end{figure*}
+
 \subsection*{Clinical dose}
 
 \subsection*{Optimization}
