added dose main slice figure to article

--- a/my_content.tex
+++ b/my_content.tex
@@ -122,6 +122,13 @@ Likewise, we generate 5 organs gravitating around the PTV, aligned on the axial 
 
 \subsection*{Clinical dose}
 
+\begin{figure*}
+	\centering
+	\includegraphics[width=0.8\textwidth]{main_slice-dose.pdf}
+	\caption{Main axial slice (center of the PTV) dose of the first patient generated.}
+	\label{fig:main_slice-dose}
+\end{figure*}
+
 \subsection*{Optimization}
 
 \subsection*{Evaluation}
