--- a/my_content.tex
+++ b/my_content.tex
@@ -116,7 +116,8 @@ Likewise, we generate 5 organs gravitating around the PTV, aligned on the axial 
 \begin{figure*}
 	\centering
 	\includegraphics[width=0.8\textwidth]{main_slice-ct.pdf}
-	\caption{Main axial slice (center of the PTV) CT of the first patient generated.}
+	\caption{Main axial slice (center of the PTV) \textbf{CT} of the first patient generated.\\
+	Structures are also contoured with legend.}
 	\label{fig:main_slice-ct}
 \end{figure*}
 
@@ -125,7 +126,8 @@ Likewise, we generate 5 organs gravitating around the PTV, aligned on the axial 
 \begin{figure*}
 	\centering
 	\includegraphics[width=0.8\textwidth]{main_slice-dose.pdf}
-	\caption{Main axial slice (center of the PTV) dose of the first patient generated.}
+	\caption{Main axial slice (center of the PTV) \textbf{dose} of the first patient generated.\\
+	Structures are also contoured.}
 	\label{fig:main_slice-dose}
 \end{figure*}
 
