elaborate why deep learning is suitable

--- a/my_content.tex
+++ b/my_content.tex
@@ -23,7 +23,8 @@ Reinforcement learning is a machine learning paradigm concerned with training ag
 Through a process of trial and error guided by rewards or penalties, agents learn to optimize their actions to achieve long-term objectives.
 It appears that the decisions taken by dosimetrists when performing the optimization of a treatment can be formalized as a reinforcement learning problem.
 Moreover, dosimetrists can guide the TPS towards an acceptable plan, but they usually struggle to explain their decision while interacting with the TPS.
-This suggests the use of deep reinforcement learning, over expert base methods.
+The difficulty to explain reasons certain decision are taken suggests the use of deep reinforcement learning over expert base methods.
+This setup is similar to image recognition, where on can say a picture represents a car or a boat, but struggles to explain why.
 
 \section{Materials and Methods}
 We introduce a new paradigm in reinforcement learning (RL), based on the evaluation of states, rather than the reward.
