added clinical DVHs

--- a/my_content.tex
+++ b/my_content.tex
@@ -117,20 +117,25 @@ Likewise, we generate five organs gravitating around the PTV, aligned on the axi
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=0.8\textwidth]{main_slice-ct.pdf}
+	\includegraphics[width=0.7\textwidth]{main_slice-ct.pdf}
 	\caption{Main axial slice (center of the PTV) \textbf{CT} of the first patient-generated.\\
 		Structures are also contoured with legend.}
 	\label{fig:main_slice-ct}
 \end{figure*}
 
 \subsection*{Clinical dose}
-
 \begin{figure*}
 	\centering
-	\includegraphics[width=0.8\textwidth]{main_slice-dose.pdf}
-	\caption{Main axial slice (center of the PTV) \textbf{dose} of the first patient-generated.\\
-		Structures are also contoured.}
+	\includegraphics[width=0.7\textwidth]{main_slice-dose.pdf}
+	\caption{First generated patient: main axial slice (center of the PTV) of the \textbf{clinical dose}.\\
+	Structures are also contoured.}
 	\label{fig:main_slice-dose}
+\end{figure*}
+\begin{figure*}
+	\centering
+	\includegraphics[width=0.7\textwidth]{dvh_example.pdf}
+	\caption{First generated patient: clinical dose \textbf{DVH}.}
+	\label{fig:clinical_dvh}
 \end{figure*}
 
 \subsection*{Optimization}
