--- a/refs.bib
+++ b/refs.bib
@@ -291,3 +291,19 @@
 }
 
 
+@misc{dubois_radiotherapy_2023,
+	title = {Radiotherapy {Dosimetry}: {A} {Review} on {Open}-{Source} {Optimizer}},
+	shorttitle = {Radiotherapy {Dosimetry}},
+	url = {http://arxiv.org/abs/2305.18014},
+	abstract = {Radiotherapy dosimetry plays a crucial role in optimizing treatment plans for cancer patients. In this study, we investigate the performance of a dozen standard state-of-the-art open-source optimizers for radiotherapy dosimetry. Our evaluation includes the use of TGG119 benchmark cases as well as one real case obtained from the Institute du Cancer de Montpellier (ICM). Among the tested optimizers, Newton CG demonstrates the fastest convergence in terms of the number of iterations. However, when considering the computation time per iteration, LBFGS emerges as the most efficient optimizer. These findings shed light on the performance of open-source optimizers for radiotherapy dosimetry, aiding practitioners in selecting suitable optimization tools for efficient treatment planning.},
+	urldate = {2024-02-20},
+	publisher = {arXiv},
+	author = {Dubois, Paul},
+	month = may,
+	year = {2023},
+	note = {arXiv:2305.18014 [cs, eess]},
+	keywords = {Electrical Engineering and Systems Science - Systems and Control},
+	annote = {Comment: 13 pages, 4 figures},
+	file = {arXiv Fulltext PDF:C\:\\Users\\PaulDubois\\Zotero\\storage\\XAGDLVJT\\Dubois - 2023 - Radiotherapy Dosimetry A Review on Open-Source Op.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\PaulDubois\\Zotero\\storage\\FD8AYZSM\\2305.html:text/html},
+}
+
