started writing the Discussion

--- a/my_content.tex
+++ b/my_content.tex
@@ -103,7 +103,7 @@ We successfully managed to mimic the dose with RL.
 
 
 \section{Discussion}
-
+We hope to extend this work to real cases, with more constraints and more complex decisions to make.
 
 \section*{Appendix}
 As this is very new and ongoing research, we generated synthetic phantom patients and associated trustable clinical doses.
